<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.go.diameter</groupId>
    <artifactId>diameter-parent</artifactId>
    <version>2.0.0</version>
    <packaging>pom</packaging>

    <name>Go :: Diameter :: ${project.artifactId}</name>
    <description>Go Diameter</description>

    <modules>
        <module>core</module>
    </modules>

    <properties>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <commons-pool.version>1.6</commons-pool.version>
        <junit.version>4.13.2</junit.version>
        <slf4j.version>2.0.7</slf4j.version>
        <netty.version>4.1.108.Final</netty.version>
        <jakarta.version>4.0.1</jakarta.version>
        <surefire.version>3.2.5</surefire.version>
        <jandex.version>3.1.2</jandex.version>
        <sctp.version>3.0.0</sctp.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
    </properties>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>http://www.gnu.org/licenses/agpl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <repositories>
                <repository>
                    <id>Nexus</id>
                    <name>Nexus Group</name>
                    <url>https://nexus.frei.dev/repository/maven-public/</url>
                    <layout>default</layout>
                </repository>
                <repository>
                    <id>repo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/releaserepo/</url>
                    <layout>default</layout>
                </repository>
            </repositories>

            <distributionManagement>
                <repository>
                    <id>repo</id>
                    <name>Release Repo</name>
                    <url>http://localhost:8046/artifactory/releaserepo/</url>
                </repository>
            </distributionManagement>
        </profile>

        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <repositories>
                <repository>
                    <id>central</id>
                    <name>Maven Central</name>
                    <url>https://repo1.maven.org/maven2/</url>
                    <layout>default</layout>
                </repository>
                <repository>
                    <id>devrepo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/devrepo/</url>
                    <layout>default</layout>
                </repository>
            </repositories>

            <distributionManagement>
                <repository>
                    <id>devrepo</id>
                    <name>Dev Repo</name>
                    <url>http://localhost:8046/artifactory/devrepo/</url>
                    <layout>default</layout>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
</project>
